<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context=".Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/main_activity_top_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_connector"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/adamina"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:fontFamily="@font/montserrat"
            android:textSize="21sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_usb"
                app:tint="@color/white" />

            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_bluetooth"
                app:tint="@color/white" />

            <View
                android:id="@+id/divider2"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_wifi"
                app:tint="@color/white" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_usb"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_usb_background"
        android:drawableStart="@drawable/ic_usb"
        android:drawableTint="@color/white"
        android:fontFamily="@font/montserrat"
        android:paddingStart="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:text="@string/connect_to_sensor_using_usb"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_wifi"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_wifi_background"
        android:drawableStart="@drawable/ic_wifi"
        android:drawableTint="@color/white"
        android:fontFamily="@font/montserrat"
        android:paddingStart="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:text="@string/connect_to_sensor_using_wifi"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/btn_usb"
        app:layout_constraintStart_toStartOf="@id/btn_usb"
        app:layout_constraintTop_toBottomOf="@id/btn_usb" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bluetooth"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_bluetooth_background"
        android:drawableStart="@drawable/ic_bluetooth"
        android:drawableTint="@color/white"
        android:fontFamily="@font/montserrat"
        android:paddingStart="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:text="@string/connect_to_sensor_using_bluetooth"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/btn_wifi"
        app:layout_constraintStart_toStartOf="@id/btn_wifi"
        app:layout_constraintTop_toBottomOf="@id/btn_wifi" />

</androidx.constraintlayout.widget.ConstraintLayout>